@@ -26,6 +26,7 @@ Bug fixes
  * Validation error messages in ``InlinePanel`` no longer count towards ``max_num`` when disabling the 'add' button (Todd Dembrey, Thibaud Colas)
  * Rich text to contentstate conversion now ignores stray closing tags (frmdstryr)
  * Escape backslashes in ``postgres_search`` queries (Hammy Goonan)
+ * Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)
 
 
 Upgrade considerations
