@@ -55,13 +55,15 @@
                         {% endblock %}
                     </td>
                     {% if show_parent %}
-                        {% with page.get_parent as parent %}
                             <td class="parent" valign="top">
-                                {% if parent %}
-                                    <a href="{% url 'wagtailadmin_explore' parent.id %}">{{ parent.get_admin_display_title }}</a>
-                                {% endif %}
+                                {% block page_parent_page_title %}
+                                    {% with page.get_parent as parent %}
+                                        {% if parent %}
+                                            <a href="{% url 'wagtailadmin_explore' parent.id %}">{{ parent.get_admin_display_title }}</a>
+                                        {% endif %}
+                                    {% endwith %}
+                                {% endblock %}
                             </td>
-                        {% endwith %}
                     {% endif %}
                     <td class="updated" valign="top">{% if page.latest_revision_created_at %}<div class="human-readable-date" title="{{ page.latest_revision_created_at|date:"d M Y H:i" }}">{% blocktrans with time_period=page.latest_revision_created_at|timesince %}{{ time_period }} ago{% endblocktrans %}</div>{% endif %}</td>
                     <td class="type" valign="top">{{ page.content_type.model_class.get_verbose_name }}</td>
